infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claritas-app
  namespace: claritas
  labels:
    app: claritas-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: claritas-app
  template:
    metadata:
      labels:
        app: claritas-app
    spec:
      containers:
        - name: claritas-app
          image: europe-west2-docker.pkg.dev/claritas-457808/claritas-app/claritas-app:PLACEHOLDER
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: claritas-app
  namespace: claritas
spec:
  selector:
    app: claritas-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
