infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: claritas-service
spec:
  selector:
    app: claritas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer  # This will create a public IP
